matrix/assets/stylesheets/application.css
/**
 * RKAG Open Source organization
 * GitHub Page project presentation
 *
 * \author Sven Marc Gehring
 * \date 2015-03-10
 */

@font-face {
    font-family: 'Ubuntu-Regular';
    src: url('../../vendor/fonts/ubuntu/Ubuntu-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Ubuntu-Bold';
    src: url('../../vendor/fonts/ubuntu/Ubuntu-Bold.ttf');
    font-weight: normal;
    font-style: normal;
}



* {
    font-family: 'Ubuntu-Regular', Tahoma, Arial;
    text-decoration: none;
}

a {
    text-decoration: none !important;
    color: #1874CD;
    transition: color 0.3s ease-in-out;
}

code { background: none !important }

a:hover {
    color: #104E8B;
    transition: color 0.3s ease-in-out;
}

img {
    max-width: 60%;
    display: block;
    border: 2px solid #ddd;
}

img:hover { cursor: pointer; }

tbody > tr > td > img {
    max-width: 80%;
    margin: 10px 10%;
}

html { overflow-y: scroll; }

body {
    margin: 0;
    padding; 0;
    background: #fcfcfc;
}


header {
    width: 100%;
    margin: 0;
    padding: 50px 10%;
    background: #3f3f3f;
    border-bottom: 1px solid #ddd;
}

    /* old font-based logo
        header h1 a { color: #4169E1 !important; }
        header h1 {
            margin: 0;
            padding: 0;
            font-size: 3.5em;
            letter-spacing: 0.43em;
            text-shadow: 0 0 1px #555;
            margin-bottom: 0;
            font-family: 'Ubuntu-Bold', Tahoma, Arial;
        }
    */
    header h1 {
        margin: 0;
        padding: 0;
    }

    header h1 img {
        border: none !important;
        max-width: 190px;
    }


    header h2 a { color: #999999 !important; }
    header h2 {
        margin-top: 20px;
        margin-bottom: 0;
        padding-left: 2px;
        font-size: 2em;
    }

    header h2 i {
        color: #666;
    }

    header .download-area {
        border: 1px solid #555;
        border-radius: 3px;
        background: #444;
        padding: 16px 30px 6px 30px;
        color: #fefefe;
    }

        header .download-area i {
            color: #7b7b7b;
            display: inline-block;
            padding-right: 10px;
        }

        header .download-area a {
            color: #fff;
        }
        header .download-area a:hover {
            color: #6495ED;
        }


#wrapper {
    width: 80%;
    margin: 0 10%;
}


#sidebar {
    margin: 0;
    padding: 20px 0;
}

    .panel {
        margin-top: 40px;
    }

    .panel-body {
        padding: 0;
        margin: 0;
    }

    .panel-link {
        padding: 9px 20px;
        margin: 0;
        background: #fcfcfc;
        border-bottom: 1px solid #ddd;
        transition: background 0.5s ease-in-out;
    }

    .panel-link: hover {
        background: #fcfcfc;
        transition: background 0.5s ease-in-out;
    }

    .panel-link:last-of-type {
        border-bottom: none;
    }

    .navigation-category {
        border: none !important;
        border-radius: 0px !important;
    }

    .navigation-heading {
        border: none;
        border-radius: 0px;
        padding: 15px 20px;
        background-color: #ebebeb !important;
    }

    .navigation-heading i {
        color: #666;
    }

    .navigation-body {
        border: none !important;
    }

    .navigation-link {
        border: none;
        padding: 12px 20px;
        font-size: 1.1em;
    }


#content {
    padding-top: 60px;
}

    #content h1 {
        font-size: 2.3em;
        margin: 0 0 30px 0;
        padding: 6px 10px;
        background: #ebebeb;
    }

    #content h3, h4 {
        margin-top: 50px;
    }

    #content p {
        font-family: Tahoma, Arial;
        text-align: justify;
        font-size: 1.2em;
    }


footer {
    width: 80%;
    margin: 40px 10% 50px 10%;
    padding: 8px 0 0 0;
    background: none;
    border-top: 1px solid #ddd;
}

    footer span {
        font-size: 0.85em;
        color: #999;
    }

